--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,13 +1,41 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-family: NotoSans, Roboto, Helvetica, Arial, sans-serif;
   font-size: 13px;
   min-height: 0;
+  /*padding-right: 2px;*/
 }
 
 window#waybar {
-  background: #11151a;
+  background: rgba(17, 21, 26, 0.4);
   color: white;
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 1px 2px rgba(0, 0, 0, 0.50);
+  /*border-bottom: 2px solid rgba(100, 114, 125, 0.5);*/
 }
+
+tooltip {
+  border-radius: 8px;
+}
+#workspaces button {
+  min-width: 1px;
+}
+#workspaces button.focused {
+  font-weight: bold;
+}
+
+#tray {
+  margin-right: 10px;
+}
+
+#custom-icon {
+  color: white;
+  font-size: 20px;
+  padding-left: 10px;
+  padding-right: 8px;
+  border-radius: 0 10px 10px 0;
+  background: #1e2733;
+ /* border-bottom: 2px solid rgba(100, 114, 125, 0.5); */
+}
+
+
